# Hairstyle_Rec_Sys

./: .gitignore  LICENSE  README.md  demo_old.ipynb  setup.cfg
bash_scripts/: run_detect_and_swap.bash
database/: db.npy  embeddings_db.npy  metadata.txt
python_scripts/: detect_and_swap.py  main.py  swinface_onnx.py  torch2onnx.py
src/models/FeatureStyleEncoder/: FSencoder.py
src/models/sean_codes/models/: pix2pix_model.py
src/scripts/: blending_gen.py  pp_gen.py
src/utils/: database_utils.py
