[metadata]
name = hairstyle_recommendation_01
version = 0.0.09
author = Le Phu Trong
author_email = lephutrong1002@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Gnort1002/Hair_Care_Recommendation_Chatbot
project_urls =
    Bug Tracker = https://github.com/Gnort1002/Hair_Care_Recommendation_Chatbot-/issues
    repository = https://github.com/Gnort1002/Hair_Care_Recommendation_Chatbot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.package_data]
models.stylegan2.op =
    *.cu
    *cpp
    *out
models.FeatureStyleEncoder.configs =
    *.yaml
models.FeatureStyleEncoder.src.pixel2style2pixel.models.stylegan2.op =
    *.cu
    *cpp
models.encoder4editing.environment =
    *.yaml
models.face_parsing.modules.src =
    *.cpp
    *.cu
    *.h
models.face_parsing.modules.src.utils =
    *.cuh
    *.h
models.STAR.tools =
    *.json
src.models.stylegan2.torch_utils.ops =
    *.cpp
    *.cu
    *.h
src.models.encoder4editing.models.stylegan2.op =
    *.cu
    *cpp

